--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,6 +24,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Run Python
+    - name: Send Trigger 
       run: |
-        python3 hello.py
+        curl -X GET http://hjshunas.duckdns.org:38989/ping
