--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,4 +17,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Send Trigger 
       run: |
-        curl -X GET http://hjshunas.duckdns.org:38989/ping
+        curl -X GET http://hjshunas.duckdns.org:38989/ping?${{secret.HASHKEY}}
