이것은 TEST입니다. ㄴㅇㅁ리ㅓ
ㅁㄴㅇㅎ,ㅜ

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Send Trigger 
       run: |
-        curl -X GET http://hjshunas.duckdns.org:38989/ping/${{secrets.HASHKEY}}/${{github.event.head_commit.message}}/${{github.event.comment.body}}
+        curl -X GET http://hjshunas.duckdns.org:38989/ping/${{secrets.HASHKEY}}/${{github.event.head_commit.message}}/${{github.event.comment.message}}
