--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "main" ]
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, '[RUN]') }}
     steps:
     - uses: actions/checkout@v3
     - name: Send Trigger 
