--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, '[RUN]') }}
+    if: ${{ contains(github.event.head_commit.message, '[RUN]') }}
     steps:
     - uses: actions/checkout@v3
     - name: Send Trigger 
