asdgasdgasdg ㄴㅁㅇ라ㅓㅗㅎ RUN asdgasdf

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     ## Last Commnit Message Check
-    if: ${{ contains(github.event.head_commit.message, '[RUN]') }}
+    if: ${{ contains(github.event.head_commit.message, 'RUN') }}
     steps:
     - uses: actions/checkout@v3
     - name: Send Trigger 
